--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,11 +1,20 @@
 # 刷题记录 
 
+## 10.25
+刷题:112，113，124，129,257,437,666路径问题
+复习: 10.18 - 10.24
+76
+
+## 10.24
+复习10.22，10.23
 
 ## 10.23
 - 牛客sql刷10道题
 - 三进制转10进制
 - 155.最小栈
 - 528.按权重随机选择
+- 31.下一个排列
+- 33.搜索旋转数组
 - 括号匹配
 
 ## 10.22
