--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,6 +1,22 @@
 # 刷题记录 
 
+## 11.1
+剑指Offer
+ 
+## 10.28
+- 121.买卖股票的最佳时机
+- 15
+- 1
+- 16
+- 18
+- 167
+- 560
 
+
+## 10.27
+- 25,23:翻转链表
+- 215:数组中的第k个最大元素
+- 复习：3，206，146，排序
 
 ## 10.26
 刷题：牛客sql
