--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,4 +1,11 @@
 # 刷题记录 
+## 11.4
+Offer59-Offer68 
+
+## 11.3
+Offer51 - Offer53_1 二分法
+Offer54 - Offer55 二叉树
+Offer56 - Offer57
 
 ## 11.2
 Offer38:字符串排列
