--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,4 +1,12 @@
 # 刷题记录 
+## 11.5
+- 二叉搜索树：98判断，700查，701插入递归迭代，
+- 二叉树遍历（前、中、后）：144，94，145
+- 二叉树遍历：114，226
+- 层序遍历：
+- 最大路径和：124，
+- **构造二叉树：654，105，106（常考）**
+
 ## 11.4
 Offer59-Offer68 
 
