--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,11 +1,25 @@
 # 刷题记录 
+
+## 11.7
+- 牛客刷：144,94,145
+- 复习：255
+- 刷题：98,230,255,589,590,783,BSTIterator
+
+## 11.6
+- **297序列化二叉树**常考***********
+- **236二叉树的最近公共祖先**(常考)*******
+- 341
+- 222（常考）*********
+
+复习：98，
+
 ## 11.5
 - 二叉搜索树：98判断，700查，701插入递归迭代，
 - 二叉树遍历（前、中、后）：144，94，145
 - 二叉树遍历：114，226
 - 层序遍历：
 - 最大路径和：124，
-- **构造二叉树：654，105，106（常考）**
+- **构造二叉树：654，105，106（常考）*********
 
 ## 11.4
 Offer59-Offer68 
