--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,4 +1,22 @@
 # 刷题记录 
+## 11.9
+复习：112:路径总和
+复习：剑指Offer树：
+- 07：重建二叉树
+- 26：树的子结构
+- 27：二叉树的镜像
+- 28：对称的二叉树
+- 32：从上到下打印二叉树
+- 34：二叉树中和为某一值的路径
+- 36: 二叉搜索树转为链表
+- 37：序列化二叉树
+- 54： 二叉搜索树的第K大节点
+- 55：二叉树的深度
+- 55：平衡二叉树
+- 68：二叉树的最近公共祖先
+- 68：二叉搜索树的最近公共祖先
+没过：27迭代方法,34,36,37,104
+
 ## 11.8
 - 牛客刷：144,94,145(完成);
 
