--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,4 +1,14 @@
 # 刷题记录 
+## 11.11
+- 学习：470
+- 复习：26，28,33,55_2,68_2,199,200:岛屿数量
+- 通过：07,34,55,68_1
+## 11.10
+- 学习：Solution199:二叉树的右视图
+- 复习：Offer07,Offer26,Offer28,Offer34,Offer33,Offer55,
+- Offer55-2,Offer68_1,Offer68_2
+- 通过：Offer27迭代方法，36,37,54
+
 ## 11.9
 复习：112:路径总和
 复习：剑指Offer树：
