--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,4 +1,10 @@
 # 刷题记录 
+## 11.12
+- 学习：
+- 复习：Offer05,Offer11,Offer12矩阵中的路径,Offer14_1,Offer14_2
+- 通过：Offer03,Offer06,Offer07,Offer09,offer10_1,Offer10_2
+- 待学：Offer13
+
 ## 11.11
 - 学习：470
 - 复习：26，28,33,55_2,68_2,199,200:岛屿数量
