--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,4 +1,10 @@
 # 刷题记录 
+## 11.13
+- 学习链表：
+- 206：反转链表(递归迭代)
+- 92:反转链表的一部分
+- 234:回文链表
+- 25：K个一组反转链表
 ## 11.12
 - 学习：
 - 复习：Offer05,Offer11,Offer12矩阵中的路径,Offer14_1,Offer14_2
