--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,6 +1,15 @@
 # 刷题记录 
+## 11.17
+- 学习：415：字符串相加，43：字符串相乘
+- 复习：2,3, 445,5 
+- 回溯:79,46,47,51,77,78，92，98,12,38,17,22,37,39,40
+
+## 11.16
+回文:9,5,125，516，647
+560:前缀和
+回溯：Offer11,46,47
 ## 11.15
-回文:9,5
+回文:9,5,125，516，647
 
 ## 11.14
 复习：92：反转链表的一部分,206,234
