--- a/题池.md
+++ b/题池.md
@@ -1,4 +1,10 @@
 ## 题池
 ### 链表：
 - 92,234,25
-- 回文:9,5
+- 回文:9,5,125，516，647
+- 前缀和：560
+### 回溯：
+- 排列、组合、子集相关问题：46，47，39，40，77，78，90，60，93
+- flood fill：733，200，130
+- 字符串中的回溯问题：17，784，22
+- 游戏问题：51（N皇后），37（数独），488，529
