--- a/刷题记录.md
+++ b/刷题记录.md
@@ -1,10 +1,14 @@
 # 刷题记录 
+## 11.19
+刷题：
+79,46,47, 
+50快速幂 
 ## 11.18
 - 复习：4，6, 7，8, 9
 ## 11.17
 - 学习：415：字符串相加，43：字符串相乘
 - 复习：2,3, 445,5 
-- 回溯:79,46,47,51,77,78，92，98,12,38,17,22,37,39,40
+- 回溯:79,46,47,51,77,78，98,12,38,17,22,37,39,40
 
 ## 11.16
 回文:9,5,125，516，647
